Updated relative path for image

--- a/assignment/styles/stylesheet.css
+++ b/assignment/styles/stylesheet.css
@@ -11,6 +11,6 @@
 }
 
 body {
-    margin: 0;
-    background-image: url("record.png");
+    margin: 0;    
+    background-image: url("../images/record.png");
 }
